# identityforge-app

.github/workflows/: build-windows.yml  release.yml
identityforge/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
identityforge/src/: App.tsx  index.css
identityforge/src-tauri/: Cargo.toml  tauri.conf.json
identityforge/src-tauri/capabilities/: default.json
identityforge/src-tauri/icons/: icon.icns
identityforge/src-tauri/src/: commands.rs  database.rs  fingerprint.rs  launcher.rs  lib.rs  main.rs
identityforge/src/components/: AboutModal.tsx  BulkCreateModal.tsx  CreateProfileModal.tsx  EditProfileModal.tsx  ProfileCard.tsx
identityforge/src/hooks/: useApi.ts
identityforge/src/types/: profile.ts
