[package]
name = "identityforge"
version = "0.1.0"
description = "Anti-Detect Browser Manager with isolated fingerprint profiles"
authors = ["IdentityForge Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "identityforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2.9.5" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Random generation for fingerprints
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Directory management
dirs = "5.0"

# Error handling
thiserror = "2.0"

# URL parsing
url = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
